# example_python_cli_di

./: .gitignore  pyproject.toml
example_python_cli_di/: __main__.py  container.py  logger.py
example_python_cli_di/cli/: __init__.py  cli.py
