[tool.poetry]
name = "example_python_cli_di"
version = "0.1.0"
description = ""
authors = ["jneo8"]

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"
click = "^8.1.3"
pydantic = "^1.10.5"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
